--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,52 +1,75 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Create Task</title>
+    <title>Temperature sensor</title>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
     <script src="jquery-3.5.1.min.js"></script>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css
-    "/>
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css" rel="stylesheet"/>
+    <link href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css" rel="stylesheet"/>
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
-
 </head>
 <body>
 
 <div class="container">
     <br>
     <h2 class="text-center">Temperature Node</h2>
+
+    <div class="col-sm-12">
+        <h3 class="text-center">Evaluate</h3>
+        <table class="table table-striped table-bordered" id="trust" style="width:100%">
+            <thead>
+            <th>Node</th>
+            <th>Name of service</th>
+            <th>Name of service provider</th>
+            <th>Name of rating criteria</th>
+            <th>Action</th>
+            </thead>
+
+            <tbody>
+            <tr th:each="data : ${trusts}">
+                <td th:text="${data.node}"></td>
+                <td th:text="${data.serviceName}"></td>
+                <td th:text="${data.serviceProvider}"></td>
+                <td th:text="${data.ratingCriteria}"></td>
+                <td th:if="${data.node != 'Temperature Node'}"><a href="" class="btn btn-primary">Request data</a></td>
+            </tr>
+            </tbody>
+        </table>
+
+    </div><br><br>
+
     <div class="col-sm-12">
 
-        <table id="example" class="table table-striped table-bordered" style="width:100%">
-                    <thead>
-                        <th>Timestamp</th>
-                        <th>Temperature in Celcius</th>
-                        <th>Temperature in Fahrenheit</th>
-                        <th>Humidity</th>
-                    </thead>
+        <table class="table table-striped table-bordered" id="temp" style="width:100%">
+            <thead>
+            <th>Timestamp</th>
+            <th>Temperature in Celcius</th>
+            <th>Temperature in Fahrenheit</th>
+            <th>Humidity</th>
+            </thead>
 
-                    <tbody>
-                        <tr th:each="data : ${sensors}">
-                        <td th:text="${data.timestamp}"></td>
-                            <td th:text="${data.temperatureCelsius}"></td>
-                            <td th:text="${data.temperatureFahrenheit}"></td>
-                            <td th:text="${data.humidity}"></td>
-                        </tr>
-                    </tbody>
-                </table>
-
+            <tbody>
+            <tr th:each="data : ${sensors}">
+                <td th:text="${data.timestamp}"></td>
+                <td th:text="${data.temperatureCelsius}"></td>
+                <td th:text="${data.temperatureFahrenheit}"></td>
+                <td th:text="${data.humidity}"></td>
+            </tr>
+            </tbody>
+        </table>
 
     </div>
 </div>
 </body>
 <script>
-$(document).ready(function() {
-$('#example').DataTable();
-} );
+    $(document).ready(function () {
+       /* $('#trust').DataTable();*/
+        $('#temp').DataTable();
+    });
 </script>
 
 
