--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Temperature sensor</title>
+    <title>Temperature</title>
     <meta charset="utf-8"/>
-    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="jquery-3.5.1.min.js"></script>
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css" rel="stylesheet"/>
-    <link href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css"/>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
@@ -15,62 +15,148 @@
 <body>
 
 <div class="container">
-    <br>
     <h2 class="text-center">Temperature Node</h2>
+    <br>
+    <div class="row">
+        <div class="col-sm-4.5">
+            <!--<h3 class="text-center">Node</h3>-->
+            <a th:href="${'/getcurrenttrustscore'}" class="btn btn-primary">Get Current Trust Score</a>
+            <table class="table table-striped table-bordered" id="trust" style="width:100%">
+                <thead>
+                <th>Node</th>
+                <th>Current Trust Score</th>
+                <th>Random Selected</th>
+                </thead>
+                <tbody>
+                <tr th:each="trust : ${trusts}">
+                    <td th:text="${trust.node}"></td>
+                    <td th:text="${trust.currentTrustScore}"></td>
+                    <td th:text="${trust.randomSelected}"></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
 
+        <div class="col-sm-3">
+            <a th:href="${'/getlatesttrustscore'}" class="btn btn-primary">Get Latest Trust Score</a>
+            <table class="table table-striped table-bordered" id="trust" style="width:100%">
+                <thead>
+                <th>Node</th>
+                <th>Latest Trust Score</th>
+                </thead>
+                <tbody>
+                <tr th:each="trust : ${latest}">
+                    <td th:text="${trust.node}"></td>
+                    <td th:text="${trust.latestTrustScore}"></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="col-sm-2.5">
+            <a th:href="${'/getcurrentratingscore'}" class="btn btn-primary">Current Rating Score</a>
+            <table class="table table-striped table-bordered" id="trust" style="width:100%">
+                <thead>
+                <!-- <th>Node</th>-->
+                <th>Current Rating Score</th>
+                </thead>
+                <tbody>
+                 <tr th:each="rating : ${currentRating}">
+                     <!--<td th:text="${trust.node}"></td>-->
+                     <td th:text="${rating.currentRatingScore}"></td>
+                 </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="col-sm-2.5">
+            <a th:href="${'/getlatestratingscore'}" class="btn btn-primary">Latest Rating Score</a>
+            <table class="table table-striped table-bordered" id="trust" style="width:100%">
+                <thead>
+                <!--<th>Node</th>-->
+                <th>Latest Rating Score</th>
+                </thead>
+                <tbody>
+                 <tr th:each="rating : ${latestRating}">
+                     <!--<td th:text="${trust.node}"></td>-->
+                     <td th:text="${rating.latestRatingScore}"></td>
+                 </tr>
+                </tbody>
+            </table>
+        </div>
+
+    </div>
+    <br>
+
+    <!--<div th:text="${json}"></div>
+    <div th:text="${selectedNode}"></div>-->
     <div class="col-sm-12">
-        <h3 class="text-center">Evaluate</h3>
+        <div class="row">
+            <div class="col-sm-2"><a th:href="${'/gettrustevaluation'}" class="btn btn-primary">Trust Evolution</a></div>
+            <div class="col-sm-8 text-center">Evaluate</div>
+        </div>
+
+        <!--<h3 class="text-center">Evaluate</h3>-->
         <table class="table table-striped table-bordered" id="trust" style="width:100%">
             <thead>
             <th>Node</th>
             <th>Name of service</th>
             <th>Name of service provider</th>
             <th>Name of rating criteria</th>
+            <th>Rating score (0-1)</th>
             <th>Action</th>
+            <!--<th>Trust Score</th>-->
             </thead>
 
             <tbody>
-            <tr th:each="data : ${trusts}">
+            <tr th:each="data : ${service}">
                 <td th:text="${data.node}"></td>
                 <td th:text="${data.serviceName}"></td>
                 <td th:text="${data.serviceProvider}"></td>
                 <td th:text="${data.ratingCriteria}"></td>
-                <td th:if="${data.node != 'Temperature Node'}"><a href="" class="btn btn-primary">Request data</a></td>
+                <td th:text="${data.score}"></td>
+                <td th:if="${data.node != 'Temperature Node'}"><a th:href="${data.serviceName}" class="btn btn-primary">Request
+                    data</a></td>
+                <!--    <td th:if="${data.node != 'Smart Home Node'}"><a th:href="${'/evaluate'} + '?node=' + ${data.node}"
+                                                                     class="btn btn-primary">Evaluate</a></td>  -->
             </tr>
             </tbody>
         </table>
+    </div>
+    <br>
 
-    </div><br><br>
 
-    <div class="col-sm-12">
+    <!--<div class="col-sm-12">
 
-        <table class="table table-striped table-bordered" id="temp" style="width:100%">
+        <table id="example" class="table table-striped table-bordered" style="width:100%">
             <thead>
             <th>Timestamp</th>
-            <th>Temperature in Celcius</th>
-            <th>Temperature in Fahrenheit</th>
-            <th>Humidity</th>
+            <th>Smoke Detectors</th>
+            <th>Door Locks</th>
+            <th>Windows</th>
+            <th>Home Appliances</th>
+            <th>Light Bulbs</th>
             </thead>
 
             <tbody>
-            <tr th:each="data : ${sensors}">
+            <tr th:each="data : ${smartHome}">
                 <td th:text="${data.timestamp}"></td>
-                <td th:text="${data.temperatureCelsius}"></td>
-                <td th:text="${data.temperatureFahrenheit}"></td>
-                <td th:text="${data.humidity}"></td>
+                <td th:text="${data.smokeDetectors}"></td>
+                <td th:text="${data.doorLocks}"></td>
+                <td th:text="${data.windows}"></td>
+                <td th:text="${data.homeAppliances}"></td>
+                <td th:text="${data.lightBulbs}"></td>
             </tr>
             </tbody>
         </table>
-
-    </div>
+    </div>-->
 </div>
 </body>
 <script>
     $(document).ready(function () {
-       /* $('#trust').DataTable();*/
-        $('#temp').DataTable();
+        /* $('#trust').DataTable();*/
+        $('#example').DataTable();
     });
 </script>
-
 
 </html>
